--- a/project2.html
+++ b/project2.html
@@ -59,6 +59,9 @@
             <li><span>SD :</span>SDN 9 Ngringo</li>
             <li><span>SMP :</span>SMPN 2 Jaten</li>
             <li><span>SMK :</span>SMK 2 Karanganyar</li>
+            <h2>Pengalaman Organisasi</h2>
+            <li>PMR Madya SMP 2 Jaten </li>
+            <li>Rohis SMP 2 Jaten</li>
         </div>
     </section>
     <br><br><br><br>
